<resources>
    <string name="app_name">Hangouts</string>
    <string name="create_contact">+</string>
    <string name="first_name">* First name:</string>
    <string name="last_name">Last name:</string>
    <string name="company">Company:</string>
    <string name="phone_number">* Phone number:</string>
    <string name="email">Email:</string>
    <string name="new_contact_details">New contact details:</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="contact_details">Contact details:</string>
    <string name="update_contact">Update contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="contact_list">Contact list:</string>
    <string name="send_message">Send message</string>
    <string name="send">send</string>
    <string name="to">To:</string>
    <string name="message">Message</string>
    <string name="separator">:</string>
    <string name="contact_list_is_empty">Contact list is empty!</string>
</resources>